# advance-car-database-rust

./: .env  Cargo.toml  README.md  Rocket.toml  diesel.toml  info
migrations/2024-09-18-200204_create_classic_cars/: down.sql  up.sql
migrations/2024-09-19-075245_create_users/: up.sql
src/: api.rs  auth.rs  main.rs  models.rs  repo.rs  schema.rs  users.rs
