[package]
name = "classic_cars"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
rocket = { version = "0.5.0-rc.2", features = ["json", "secrets", "tls"] }
rocket_db_pools = { version = "0.1", features = [
    "diesel_postgres",
    "deadpool_redis",
] }
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono"] }
diesel-async = { version = "0.4", features = ["postgres"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
r2d2 = "0.8"
diesel_migrations = "2.0"
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5.3"
rand = "0.8"
